# Next-Word-Prediction-LSTM

./: README.md  main.py  model.py  predict.py  pyproject.toml  sherlock.model  sherlock_sp_2.vocab  train.py
src/v1/: main.py
src/v2/: data_preprocessing.py  text_generator.py  training.py
