[project]
name = "sherlock-generator"
version = "0.1.0"
description = "Simple Sherlock Holmes text generator"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "numpy>=1.21.0",
]

# Remove build-system entirely for script-only projects
